Improve logging, raise Gradle memory limit